addressed nitpicks